--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -21,7 +21,7 @@ code {
 :root {
   --light-gray: #404040;
   --dark-gray: #181818;
-  --primary-text: #474747;
+  --primary-text: #505050;
   --secondary-colour: #202020;
 
   @media only screen and (max-device-width: 425px) {
